crates/fec-parser/tests/snapshots/itemizations__sc_306688_v5_3.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SC_306688.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SC",
    "form_type": "SC/10",
    "filer_committee_id": "C00167585",
    "transaction_id": "C103263",
    "receipt_line_number": "13A",
    "lender": {
      "entity_type": "CAN",
      "organization_name": null,
      "name": {
        "first_name": "Maxine",
        "last_name": "Waters",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "10124 S. Broadway",
        "street_2": "Personal Funds",
        "city": "Los Angeles",
        "state": "CA",
        "zip_code": "90003"
      }
    },
    "election_code": "G2006",
    "election_other_description": null,
    "loan_amount_original": 20000.0,
    "loan_payment_to_date": 0.0,
    "loan_balance": 20000.0,
    "loan_incurred_date": "2006-11-02",
    "loan_due_date_terms": "20071102",
    "loan_interest_rate_terms": "0.00000",
    "secured": false,
    "personal_funds": null,
    "lender_committee_id": null,
    "lender_candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "memo": false,
    "memo_text": null,
    "guarantors": [],
    "image_number": null
  },
  {
    "family": "SC",
    "form_type": "SC/10",
    "filer_committee_id": "C00167585",
    "transaction_id": "C103311",
    "receipt_line_number": "13A",
    "lender": {
      "entity_type": "CAN",
      "organization_name": null,
      "name": {
        "first_name": "Maxine",
        "last_name": "Waters",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "10124 S. Broadway",
        "street_2": "Personal Funds",
        "city": "Los Angeles",
        "state": "CA",
        "zip_code": "90003"
      }
    },
    "election_code": "G2006",
    "election_other_description": null,
    "loan_amount_original": 5000.0,
    "loan_payment_to_date": 0.0,
    "loan_balance": 5000.0,
    "loan_incurred_date": "2006-11-24",
    "loan_due_date_terms": "20071124",
    "loan_interest_rate_terms": "0.00000",
    "secured": false,
    "personal_funds": null,
    "lender_committee_id": null,
    "lender_candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "memo": false,
    "memo_text": null,
    "guarantors": [],
    "image_number": null
  },
  {
    "family": "SC",
    "form_type": "SC/10",
    "filer_committee_id": "C00167585",
    "transaction_id": "C103319",
    "receipt_line_number": "13A",
    "lender": {
      "entity_type": "CAN",
      "organization_name": null,
      "name": {
        "first_name": "Maxine",
        "last_name": "Waters",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "10124 S. Broadway",
        "street_2": "Personal Funds",
        "city": "Los Angeles",
        "state": "CA",
        "zip_code": "90003"
      }
    },
    "election_code": "G2006",
    "election_other_description": null,
    "loan_amount_original": 3000.0,
    "loan_payment_to_date": 0.0,
    "loan_balance": 3000.0,
    "loan_incurred_date": "2006-11-27",
    "loan_due_date_terms": "20071127",
    "loan_interest_rate_terms": "0.00000",
    "secured": false,
    "personal_funds": null,
    "lender_committee_id": null,
    "lender_candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "memo": false,
    "memo_text": null,
    "guarantors": [],
    "image_number": null
  }
]
