crates/fec-parser/tests/snapshots/itemizations__sd_163291_v5_1.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"SD_163291.fec\")"
snapshot_kind: text
---
[
  {
    "family": "SD",
    "form_type": "SD9",
    "filer_committee_id": "C00167585",
    "transaction_id": "SD94109",
    "creditor": {
      "entity_type": "CCM",
      "organization_name": "JOHN KERRY FOR PRESIDENT INC",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "901 15th Street NW",
        "street_2": null,
        "city": "Washington",
        "state": "DC",
        "zip_code": "20005"
      }
    },
    "purpose_of_debt_or_obligation": "Expenses for mailing: See AO 2004-37",
    "beginning_balance": 10000.0,
    "incurred_amount": 2246.54,
    "payment_amount": 0.0,
    "balance_at_close": 12246.54,
    "committee_fec_id": "C00167585",
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  },
  {
    "family": "SD",
    "form_type": "SD10",
    "filer_committee_id": "C00167585",
    "transaction_id": "D101695",
    "creditor": {
      "entity_type": "ORG",
      "organization_name": "California Bank & Trust",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "P.O.Box 30833",
        "street_2": null,
        "city": "Salt Lake City",
        "state": "UT",
        "zip_code": "841300833"
      }
    },
    "purpose_of_debt_or_obligation": "Campaign Items, Meetings",
    "beginning_balance": 0.0,
    "incurred_amount": 1647.83,
    "payment_amount": 1602.83,
    "balance_at_close": 45.0,
    "committee_fec_id": null,
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  },
  {
    "family": "SD",
    "form_type": "SD10",
    "filer_committee_id": "C00167585",
    "transaction_id": "D102119",
    "creditor": {
      "entity_type": "ORG",
      "organization_name": "Citrus Studio",
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "address": {
        "street_1": "1601 Cloverfield 2ndTower",
        "street_2": null,
        "city": "Santa Monica",
        "state": "CA",
        "zip_code": "90404"
      }
    },
    "purpose_of_debt_or_obligation": "Website Hosting",
    "beginning_balance": 0.0,
    "incurred_amount": 99.9,
    "payment_amount": 0.0,
    "balance_at_close": 99.9,
    "committee_fec_id": null,
    "candidate": {
      "fec_id": null,
      "name": {
        "first_name": "",
        "last_name": "",
        "middle_name": null,
        "prefix": null,
        "suffix": null
      },
      "office": null,
      "state": null,
      "district": null
    },
    "conduit_name": null,
    "conduit_address": {
      "street_1": null,
      "street_2": null,
      "city": null,
      "state": null,
      "zip_code": null
    },
    "image_number": null
  }
]
